@startuml

title __PERSISTENCE's Class Diagram__\n

  namespace br.com.ufrn.imd.lpii.classes.persistence {
    class br.com.ufrn.imd.lpii.classes.persistence.ConnectionBem {
        + atualizarLocalizacao()
        + buscarBemByAtributo()
        + buscarBemByLocalizacao()
        + cadastrarBem()
        + criarTabela()
        + listarBem()
        + listarBens()
    }
  }
  

  namespace br.com.ufrn.imd.lpii.classes.persistence {
    class br.com.ufrn.imd.lpii.classes.persistence.ConnectionCategoria {
        + buscarCategoriaByCodigo()
        + cadastrarCategoria()
        + cadastrarCategoria()
        + criarTabela()
        + listarCategoriaToArray()
        + listarCategorias()
    }
  }
  

  namespace br.com.ufrn.imd.lpii.classes.persistence {
    class br.com.ufrn.imd.lpii.classes.persistence.ConnectionLocalizacao {
        + buscarLocalizacaoByCodigo()
        + cadastrarLocalizacao()
        + cadastrarLocalizacao()
        + criarTabela()
        + listarLocalizacaoToArray()
        + listarLocalizacoes()
    }
  }
  

  namespace br.com.ufrn.imd.lpii.classes.persistence {
    abstract class br.com.ufrn.imd.lpii.classes.persistence.ConnectionSQLite {
        ~ connection : Connection
        ~ statement : Statement
        + apagarTabela()
        + conectar()
        + desconectar()
    }
  }
  

  br.com.ufrn.imd.lpii.classes.persistence.ConnectionBem -up-|> br.com.ufrn.imd.lpii.classes.persistence.ConnectionSQLite
  br.com.ufrn.imd.lpii.classes.persistence.ConnectionCategoria -up-|> br.com.ufrn.imd.lpii.classes.persistence.ConnectionSQLite
  br.com.ufrn.imd.lpii.classes.persistence.ConnectionLocalizacao -up-|> br.com.ufrn.imd.lpii.classes.persistence.ConnectionSQLite


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
